--- a/index.html
+++ b/index.html
@@ -1,69 +1,94 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="./style.css">
-        <meta charset ="utf-8">
-        <title>Instagram</title>
-        <link rel="icon" type="image/x-icon" href="images/insta_favicon.ico">
-    </head>
+<!DOCTYPE html>
+<html lang="en">
 
-    <body>
-        
-        <div class="forms">
-            <form id = "form1">
-                <div id="InstLogo">
-                </div>
-                <input type="text" id="fname" name="firstname" placeholder="Телефон, имя пользователя или эл. адрес">
-                <input type="password" id="lname" name="lastname" placeholder="Пароль">
-                <button id ="Button1"><span id="mm">Войти</span></button>
-                <p class="OR">ИЛИ</p>
-                <p><a href="#"id = "FB">Войти через Facebook</a></p>
-                <p ><a href="#"><span id="Forget">Забыли пароль?</span></a></p>
-            </form>
-            <form id = "form2">
-                <p>У вас ещё нет аккаунта? <a href="#"><span id="Reg">Зарегистрироваться</span></a></p>
-            </form>     
+<head>
+    <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://static.xx.fbcdn.net/rsrc.php/yb/r/hLRJ1GG_y0J.ico">
+    <title>Facebook — Выполните вход или зарегистрируйтесь</title>
+</head>
 
+<body>
+    <div class="content-container">
+        <main class="main_content-container">
+            <div class="main_content-text_container">
+                <h1 class="company_name-title">facebook</h1>
+                <span class="company_description-text">Facebook помогает вам всегда оставаться на связи и общаться со
+                    своими знакомыми.</span>
             </div>
-        <div class="install">
-            <p> Установите приложение.</p>
-            <div id="inst">
+            <div class="main_content-form_container">
+                <form class="form-container">
+                    <div class="form-main_content-container">
+                        <input type="text" placeholder="Электронный адрес или номер телефона"
+                            class="form-email_input-field">
+                        <input type="password" placeholder="Пароль" class='form-password_input-field'>
+                        <button class="form-submit_button" type="submit">Вход</button>
+                        <a href="#" class="form-forgot_password-anchor">Забыли пароль?</a>
 
+                    </div>
+                    <button class="form-create_new-button">Создать новый аккаунт</button>
+                </form>
+                <span class="create_new_description-text">
+                    <a href="#" class="create_new_one">Создать Страницу</a>
+                    знаменитости, музыкальной группы или компании.</span>
             </div>
-        </div>    
-        <img class = 'phone_icon' src="https://www.instagram.com/static/images/homepage/home-phones.png/43cc71bb1b43.png" id="phone">
-        <div id="FBicon"></div>
-        <div class="footer">
-            <ul>
-                <li><a href="#"></a>Meta</a></li>
-                <li><a href="#">Информация</a></li>
-                <li><a href="#">Блог</a></li>
-                <li><a href="#">Вакансии</a></li>
-                <li><a href="#">Помощь</a></li>
-                <li><a href="#">API</a></li>
-                <li><a href="#">Конфиденциальность</a></li>
-                <li><a href="#">Условия</a></li>
-                <li><a href="#">Популярные аккаунты</a></li>
-                <li><a href="#">Хэштеги</a></li>
-                <li><a href="#">Места</a></li>
-                <li><a href="#">Instagram Lite</a></li>
-            </ul>
-        </div>
-        <div class="footer2">
-            <ul>
-                <li><a href="#">Красота</a></li>
-                <li><a href="#">Танцы</a></li>
-                <li><a href="#">Фитнес</a></li>
-                <li><a href="#">Еда и напитки</a></li>
-                <li><a href="#">Дом и сад</a></li>
-                <li><a href="#">Музыка</a></li>
-                <li><a href="#">Изобразительное искусство</a></li>
-            </ul>
-        </div>
-        <div class="footer3">
-            <ul>
-                <li><a href="#">Русский</a></li>
-                <li><a href="#">&copy; 2022 Instagram from Meta</a></li>
-            </ul>
-        </div>
-    </body>
+        </main>
+        <footer class="footer_content-container">
+            <div class="languages-container">
+                <ul class="languages-list">
+                    <li>Русский</li>
+                    <li><a href=" #">English (US)</a></li>
+                    <li><a href="#">Türkçe</a></li>
+                    <li><a href="#">Bahasa Indonesia</a></li>
+                    <li><a href="#">中文(简体)</a></li>
+                    <li><a href="#">Қазақша</a></li>
+                    <li><a href="#">Deutsch</a></li>
+                    <li><a href="#">한국어</a></li>
+                    <li><a href="#">Shqip</a></li>
+                    <li><a href="#">Español</a></li>
+                    <li><a href="#">Português (Brasil)</a></li>
+                    <li><a href="#" id='language-button'>+</a></li>
+                </ul>
+            </div>
+            <div class="pagination_list-container">
+                <ul class="pagination_list">
+                    <li><a href="#">Регистрация</a></li>
+                    <li><a href="#">Вход</a></li>
+                    <li><a href="#">Messenger</a></li>
+                    <li><a href="#">Facebook Lite</a></li>
+                    <li><a href="#">Watch</a></li>
+                    <li><a href="#">Места</a></li>
+                    <li><a href="#">Игры</a></li>
+                    <li><a href="#">Marketplace</a></li>
+                    <li><a href="#">FacebookPay</a></li>
+                    <li><a href="#">Oculus</a></li>
+                    <li><a href="#">Portal</a></li>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Bulletin</a></li>
+                    <li><a href="#">Местные</a></li>
+                    <li><a href="#">Благотворительные акции</a></li>
+                    <li><a href="#">Услуги</a></li>
+                    <li><a href="#">Центр информации о голосовании</a></li>
+                    <li><a href="#">Группы</a></li>
+                    <li><a href="#">Информация</a></li>
+                    <li><a href="#">Создать рекламу</a></li>
+                    <li><a href="#">Создать Страницу</a></li>
+                    <li><a href="#">Разработчикам</a></li>
+                    <li><a href="#">Вакансии</a></li>
+                    <li><a href="#">Конфиденциальность</a></li>
+                    <li><a href="#">Файлы cookie</a></li>
+                    <li><a href="#">Рекламные предпочтения</a></li>
+                    <li><a href="#">Условияи спользования</a></li>
+                    <li><a href="#">Справка</a></li>
+                </ul>
+            </div>
+            <div class = 'copyright-container'>
+                <span> Meta &copy; 2022</span>
+            </div>
+        </footer>
+    </div>
+</body>
+
 </html>
